--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,9 @@
-<div class="container mt-4">
+<app-navbar></app-navbar>
+<div class="container-fluid">
   <div class="row">
-    <div class="col-lg-4 col-md-12 col-sm-12 mb-4">
-      <app-sidebar></app-sidebar>
-    </div>
-    <div class="col-lg-8 col-md-12 col-sm-12">
+    <app-sidebar></app-sidebar>
+    <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
       <router-outlet></router-outlet>
-    </div>
+    </main>
   </div>
 </div>
