--- a/src/app/pais/components/pais-input/pais-input.component.html
+++ b/src/app/pais/components/pais-input/pais-input.component.html
@@ -1,4 +1,5 @@
 <form (ngSubmit)="buscar()" autocomplete="off">
-    <input [(ngModel)]="termino" class="form-control" type="text" 
+    <label for="buscar" class="form-label">Buscar: </label>
+    <input [(ngModel)]="termino" id="buscar" class="form-control" type="text" 
         name="buscar" [placeholder]="placeholder" (keyup)="keyUp()"/>
 </form>
