--- a/src/app/pais/pages/por-capital/por-capital.component.html
+++ b/src/app/pais/pages/por-capital/por-capital.component.html
@@ -1,8 +1,11 @@
 <div class="row">
-    <div class="col">
+    <div class="col mt-2">
         <div class="animate__animated animate__fadeIn">
-            <h2>Capital</h2>
-            <hr>
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                  <li class="breadcrumb-item fs-5 active" aria-current="page">Capital</li>
+                </ol>
+            </nav>
             <div class="row">
                 <div class="col">
                    <app-pais-input 
