--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -1,20 +1,24 @@
 <div class="row">
-    <div class="col">
+    <div class="col mt-2">
         <div class="animate__animated animate__fadeIn">
-            <h2>País</h2>
-            <hr>
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                  <li class="breadcrumb-item fs-5 active" aria-current="page">País</li>
+                </ol>
+            </nav>
             <div class="row">
-                <div class="col">
-                <app-pais-input 
-                    (onEnter)="buscar($event)" 
-                    (onDebounce)="sugerencias($event)"
-                    placeholder="Buscar país..."></app-pais-input>
+                <div class="col col-r-custom">
+                    <app-pais-input 
+                        (onEnter)="buscar($event)" 
+                        (onDebounce)="sugerencias($event)"
+                        placeholder="Buscar país...">
+                    </app-pais-input>
+                    <!-- <ul class="dropdown-menu show ddwm-custom" role="menu" *ngIf="paisesSugeridos.length > 0">
+                        <li *ngFor="let pais of paisesSugeridos">
+                            <a [routerLink]="['/pais', pais.alpha2Code]" class="dropdown-item" href="#">{{pais.name}}</a>
+                        </li>
+                    </ul> -->
                 </div>
-                <ul class="list-group psf">
-                    <li class="list-group-item list-group-item-action cursor-pointer" *ngFor="let pais of paisesSugeridos">
-                        <a [routerLink]="['/pais', pais.alpha2Code]">{{pais.name}}</a>
-                    </li>
-                </ul>
             </div>
             <hr>
         </div>
