--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,10 +1,31 @@
-<h2>Busquedas</h2>
-<hr>
-<ul class="list-group">
-  <li routerLink="" 
-      routerLinkActive="active"
-      [routerLinkActiveOptions]="{ exact: true}" 
-      class="list-group-item cursor-pointer">Por país</li>
-  <li routerLink="region" routerLinkActive="active" class="list-group-item cursor-pointer">Por región</li>
-  <li routerLink="capital" routerLinkActive="active" class="list-group-item cursor-pointer">Por capital</li>
-</ul>
+<nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
+  <div class="position-sticky pt-3">
+    <ul class="nav flex-column">
+      <li class="nav-item"
+          routerLink="">
+        <a class="nav-link cursor-pointer" 
+          routerLinkActive="active"
+          [routerLinkActiveOptions]="{ exact: true}">
+          <i class="bi bi-pin-map"></i>
+          País
+        </a>
+      </li>
+      <li class="nav-item" 
+          routerLink="capital">
+        <a class="nav-link cursor-pointer" 
+        routerLinkActive="active">
+          <i class="bi bi-bookmark"></i>
+          Capital
+        </a>
+      </li>
+      <li class="nav-item" 
+      routerLink="region">
+        <a class="nav-link cursor-pointer" 
+          routerLinkActive="active">
+          <i class="bi bi-map"></i>
+          Región
+        </a>
+      </li>
+    </ul>
+  </div>
+</nav>
