--- a/src/app/pais/components/pais-tabla/pais-tabla.component.html
+++ b/src/app/pais/components/pais-tabla/pais-tabla.component.html
@@ -8,14 +8,13 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let pais of paises; let i = index"
-            class="animate__animated animate__fadeIn">
+        <tr *ngFor="let pais of paises; let i = index">
             <td>{{i + 1}}</td>
             <td>
                 <img class="small-flag" [src]="pais.flag">
             </td>
             <td>
-                <a [routerLink]="['/pais', pais.alpha2Code]">{{pais.name}}</a>
+                <a [routerLink]="['/pais', pais.alpha2Code]" class="text-decoration-none">{{pais.name}}</a>
             </td>
             <td>{{pais.population | number}}</td>
         </tr>
