--- a/src/app/pais/pages/por-region/por-region.component.html
+++ b/src/app/pais/pages/por-region/por-region.component.html
@@ -9,21 +9,13 @@
             <div class="row">
                 <div class="col">
                     <div class="btn-group">
-                        <button class="btn" 
+                        <button 
                             [class]="getClassCss(region)" 
                             *ngFor="let region of regiones"
                             (click)="activarRegion(region)">
                             {{region | titlecase}}
                         </button>
-                      </div>
-
-
-                    <!-- <button class="btn ms-3" 
-                        [class]="getClassCss(region)"
-                        *ngFor="let region of regiones"
-                        (click)="activarRegion(region)">
-                        {{region | titlecase}}
-                    </button> -->
+                    </div>
                 </div>
             </div>
             <hr>
